# StoreManagementAPI

./: .gitignore  README.md  StoreManagementAPI.dockerfile  docker-compose.yml  pyproject.toml  start.sh
StoreManagementAPI/StoreManagement/: asgi.py  urls.py  wsgi.py
StoreManagementAPI/StoreManagement/settings/: base.py  local.py
StoreManagementAPI/apps/invoice/: models.py
StoreManagementAPI/apps/invoice/api/: urls.py
StoreManagementAPI/apps/invoice/api/serializers/: invoice_serializers.py
StoreManagementAPI/apps/invoice/api/views/: invoice_views.py
StoreManagementAPI/apps/invoice/migrations/: 0001_initial.py  0002_rename_id_product_salesorderdetail_product_and_more.py  0003_salesorderdetail_subtotal_salesorderdetail_total.py
StoreManagementAPI/apps/product/: models.py
StoreManagementAPI/apps/product/api/: urls.py
StoreManagementAPI/apps/product/migrations/: 0001_initial.py
StoreManagementAPI/apps/sales_order_detail/: apps.py  models.py
StoreManagementAPI/apps/sales_order_detail/api/: urls.py
StoreManagementAPI/apps/sales_order_detail/migrations/: 0001_initial.py
StoreManagementAPI/apps/sales_order_header/: apps.py  models.py
StoreManagementAPI/apps/sales_order_header/api/: urls.py
StoreManagementAPI/apps/sales_order_header/migrations/: 0001_initial.py  0002_alter_salesorderheader_options.py
storemanagementapi/StoreManagement/: manage.py
storemanagementapi/StoreManagement/StoreManagement/: urls.py
storemanagementapi/StoreManagement/StoreManagement/settings/: base.py  production.py
storemanagementapi/StoreManagement/base/: models.py
(+6 files in other folders)
