[tool.poetry]
name = "storemanagementapi"
version = "0.1.0"
description = ""
authors = ["ReyEduardo836 <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
